--- a/apps/staging/kustomization.yaml
+++ b/apps/staging/kustomization.yaml
@@ -3,6 +3,6 @@ kind: Kustomization
 namespace: podinfo
 resources:
   - ../base/podinfo
-  - ../base/internal-app
+  - ../base/app-internal
 patchesStrategicMerge:
   - podinfo-values.yaml
