--- a/clusters/staging/flux-system/secret.yaml
+++ b/clusters/staging/flux-system/secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: https-credentials
+  namespace: flux-system
 type: Opaque
 data:
   username: bW9oYW5hLWludGFpbg==
