modified:   infrastructure/sources/kustomization.yaml

--- a/infrastructure/sources/kustomization.yaml
+++ b/infrastructure/sources/kustomization.yaml
@@ -5,5 +5,5 @@ resources:
   - bitnami.yaml
 #  - podinfo.yaml
   - jetstack.yaml
-  - app-internal.yaml
+  # - app-internal.yaml
   - app-external.yaml
