--- a/apps/base/app-external/release.yaml
+++ b/apps/base/app-external/release.yaml
@@ -1,7 +1,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: app-extrenal
+  name: app-external
 spec:
   releaseName: app-external
   chart:
