--- a/apps/base/bdb/kustomization.yaml
+++ b/apps/base/bdb/kustomization.yaml
@@ -2,7 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: fabricclient
 resources:
-  # - ../base/podinfo
-  # - ../base/app-internal
-  - ../base/app-external
-  - ../base/bdb
+  - namespace.yaml
+  - release.yaml
+
