modified:   apps/staging/kustomization.yaml

--- a/apps/staging/kustomization.yaml
+++ b/apps/staging/kustomization.yaml
@@ -5,5 +5,5 @@ resources:
   # - ../base/podinfo
   # - ../base/app-internal
   # - ../base/app-external
-  - ../base/bdb
+  # - ../base/bdb
   - ../base/ui
