renamed:    apps/base/app-external/kustomization.yaml -> apps/base/external-app/kustomization.yaml 	renamed:    apps/base/app-external/namespace.yaml -> apps/base/external-app/namespace.yaml 	renamed:    apps/base/app-external/release.yaml -> apps/base/external-app/release.yaml 	renamed:    apps/base/app-internal/kustomization.yaml -> apps/base/internal-app/kustomization.yaml 	renamed:    apps/base/app-internal/namespace.yaml -> apps/base/internal-app/namespace.yaml 	renamed:    apps/base/app-internal/release.yaml -> apps/base/internal-app/release.yaml 	modified:   apps/staging/kustomization.yaml 	renamed:    infrastructure/sources/app-external.yaml -> infrastructure/sources/external-app.yaml 	renamed:    infrastructure/sources/app-internal.yaml -> infrastructure/sources/internal-app.yaml 	modified:   infrastructure/sources/kustomization.yaml

--- a/apps/base/external-app/release.yaml
+++ b/apps/base/external-app/release.yaml
@@ -1,15 +1,15 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: app-internal
+  name: external-app
 spec:
-  releaseName: app-internal
+  releaseName: external-app
   chart:
     spec:
-      chart: app-internal
+      chart: external-app
       sourceRef:
         kind: GitRepository
-        name: app-internal
+        name: external-app
         namespace: flux-system
       version: "0.1.0"
   interval: 1m
@@ -18,4 +18,4 @@ spec:
       retries: 3
   values:
     image:
-      imageRegistry: "intainregistry/node-internal-app-umb-testing-cni:0.1-rc1"
+      imageRegistry: "intainregistry/saluda-external-app-staging:1.0.30"
