--- a/infrastructure/sources/external-app.yaml
+++ b/infrastructure/sources/external-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: GitRepository
 metadata:
-  name: app-external
+  name: external-app
   namespace: flux-system
 spec:
   interval: 1m
