--- a/infrastructure/mongodb/release.yaml
+++ b/infrastructure/mongodb/release.yaml
@@ -16,6 +16,7 @@ spec:
     remediation:
       retries: 3
   values:
+    useStatefulSet: "true"    
     auth:
       ## @param auth.enabled Enable authentication
       ## ref: https://docs.mongodb.com/manual/tutorial/enable-authentication/
