modified:   infrastructure/mongodb/release.yaml

--- a/infrastructure/mongodb/release.yaml
+++ b/infrastructure/mongodb/release.yaml
@@ -3,6 +3,7 @@ kind: HelmRelease
 metadata:
   name: mongodb
 spec:
+  releaseName: mongodb
   chart:
     spec:
       chart: mongodb
@@ -18,16 +19,6 @@ spec:
   values:
     useStatefulSet: "true"    
     auth:
-      ## @param auth.enabled Enable authentication
-      ## ref: https://docs.mongodb.com/manual/tutorial/enable-authentication/
-      ##
       enabled: true
-      ## @param auth.rootUser MongoDB&reg; root user
-      ##
       rootUser: root
-      ## @param auth.rootPassword MongoDB&reg; root password
-      ## ref: https://github.com/bitnami/bitnami-docker-mongodb/blob/master/README.md#setting-the-root-password-on-first-run
-      ##
       rootPassword: "mongodb"
-      username: "mongodb"
-      password: "mongodb"
